--- a/publiccode.yml
+++ b/publiccode.yml
@@ -18,7 +18,7 @@ description:
     features:
       - archiviazione documentale
     longDescription: |
-      Ricerca unità documentarie è l'API REST che consente di ricercare le unità documnentarie versate nel sistema di conservazione SACER attraverso un set di filtri che permetteranno di ottenere una estrazione secondo determinati criteri. Si tratta di una componente 
+      Ricerca unità documentarie è l'API REST che consente di ricercare le unità documnentarie versate nel sistema di conservazione SACER attraverso un set di filtri che permetteranno di ottenere una estrazione secondo determinati criteri.
     shortDescription: |-
       Modulo applicativo dedicato a funzioni di monitoraggio delle unità documentarie.
 developmentStatus: stable
