--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>ricerca-unita-documentarie</artifactId>
-	<version>1.2.1-SNAPSHOT</version>
+	<version>1.2.0</version>
 	<name>ricerca-unita-documentarie</name>
 	<description>Progetto api per restituzione di organizzazioni abilitate</description>
 
